--- a/docs/css.css
+++ b/docs/css.css
@@ -1,13 +1,10 @@
-h1 {
-    /* font-size: 30px; */
-    font-family: "Source Code Pro", monospace;
-    color: white;
-}
-
 .terminal {
     color: whitesmoke;
     font-family: "Source Code Pro", monospace;
     font-size: large;
+}
+p.green {
+    color: green;
 }
 
 .cmd {
@@ -21,17 +18,22 @@ input.cmd:focus {
     outline: none;
 }
 
+.cursor {
+    font-size: 1.5rem !important;
+    font-family: "Source Code Pro", monospace !important;
+    color: whitesmoke;
+}
 .cursor::after {
     content: "";
     display: inline-block;
     margin-left: 3px;
-    background-color: white;
+    background-color: whitesmoke;
     animation-name: blink;
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
-h1.cursor::after {
-    height: 24px;
+.cursor::after {
+    height: 1.5rem;
     width: 13px;
 }
 
