feat(agenda): skeleton

--- a/docs/css.css
+++ b/docs/css.css
@@ -2,10 +2,28 @@ body {
     background-image: url("./recap-bg1.jpg");
     background-size: cover;
 }
+.small {
+    font-size: small;
+    font-style: italic;
+}
+.description {
+    font-size: 1rem !important;
+    line-height: 1.3rem !important;
+}
+.bio {
+    line-height: 1.2rem !important;
+}
+
 .sapUiGlobalBackgroundColor,
 .sapMShellGlobalInnerBackground,
 .sapMPageBgStandard {
     background-color: unset !important;
+}
+
+.sapMPanel > .sapMPanelHdr,
+.sapMPanelWrappingDiv,
+.sapMPanelWrappingDivTb {
+    border-bottom: 0 !important;
 }
 .terminal {
     color: whitesmoke;
