--- a/docs/css.css
+++ b/docs/css.css
@@ -1,20 +1,22 @@
 body {
-    background-image: url("./recap-bg1.jpg");
-    background-size: cover;
+    background-color: #1c2327;
 }
-.smallItalic {
-    font-size: small;
-    font-style: italic;
+.neonText {
+    color: #fff;
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+        0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
 }
-.small {
-    font-size: small;
-}
-.description {
-    font-size: 1rem !important;
-    line-height: 1.3rem !important;
-}
-.bio {
-    line-height: 1.2rem !important;
+
+@keyframes pulsate {
+    100% {
+        text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
+            0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
+    }
+
+    0% {
+        text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #0fa,
+            0 0 45px #0fa, 0 0 55px #0fa, 0 0 70px #0fa, 0 0 80px #0fa;
+    }
 }
 
 .sapUiGlobalBackgroundColor,
@@ -22,91 +24,30 @@ body {
 .sapMPageBgStandard {
     background-color: unset !important;
 }
-
-.sapMPanel > .sapMPanelHdr,
-.sapMPanelWrappingDiv,
-.sapMPanelWrappingDivTb {
-    border-bottom: 0 !important;
-}
-.terminal {
-    color: whitesmoke;
-    font-family: "Source Code Pro", monospace;
-    font-size: large;
-    margin-top: 1.5em;
-}
-p.green {
-    color: green;
-}
-
-[id$="output"],
-[id$="output-past"] {
-    margin-top: 1.5em;
-}
-
-.cmd {
-    background-color: #1c2327;
-    border: 0 #1c2327;
-}
-input.cmd:hover,
-input.cmd:focus {
-    background-color: #1c2327;
-    border: 0 #1c2327;
-    outline: none;
-}
-
+.where,
 .when,
 .what {
-    font-size: 1.5rem !important;
     font-family: "Source Code Pro", monospace !important;
-}
-.when {
-    color: #83c1f5 !important;
-}
-.what {
-    color: whitesmoke !important;
-}
-.cursor {
-    font-size: 1.25rem !important;
-    font-family: "Source Code Pro", monospace !important;
-    color: #ada7a7 !important;
-}
-.cursor::after {
-    content: "";
-    display: inline-block;
-    margin-left: 3px;
-    background-color: whitesmoke;
-    animation-name: blink;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-.cursor::after {
-    height: 1.5rem;
-    width: 13px;
 }
 
-.cmd::-webkit-input-placeholder {
-    opacity: 0.6;
+.what {
+    color: whitesmoke !important;
+    font-size: 2.5rem !important;
+    animation: pulsate 1.5s infinite alternate;
+    border: 0.1rem solid #fff;
+    border-radius: 2rem;
+    padding: 1.5em;
+    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #0fa, 0 0 0.8rem #0fa;
 }
-.cmd::-moz-placeholder {
-    opacity: 0.6;
+.when {
+    padding-top: 2em;
+    color: whitesmoke !important;
+    font-size: 1.5rem !important;
 }
-.cmd:-ms-input-placeholder {
-    opacity: 0.6;
+.where {
+    color: whitesmoke !important;
+    font-size: 1.5rem !important;
 }
-.cmd:-moz-placeholder {
-    opacity: 0.6;
-}
-@keyframes blink {
-    0% {
-        opacity: 1;
-    }
-    49% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+.center {
+    text-align: center;
 }
