--- a/docs-dev/webapp/css.css
+++ b/docs-dev/webapp/css.css
@@ -1,24 +1,6 @@
 body {
     background-color: #1c2327;
 }
-/* mucho copypasta from https://css-tricks.com/how-to-create-neon-text-with-css/ */
-.neonText {
-    color: #fff;
-    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-        0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
-}
-
-@keyframes pulsate {
-    100% {
-        text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
-            0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
-    }
-
-    0% {
-        text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #0fa,
-            0 0 45px #0fa, 0 0 55px #0fa, 0 0 70px #0fa, 0 0 80px #0fa;
-    }
-}
 
 .sapUiGlobalBackgroundColor,
 .sapMShellGlobalInnerBackground,
@@ -26,58 +8,77 @@ body {
     background-color: unset !important;
 }
 
-.why,
-.sapMPanelHdr,
-.cfp,
-.where,
-.when,
-.what {
-    font-family: "Source Code Pro", monospace !important;
-}
-
-.hereswhy {
+.t {
     color: whitesmoke !important;
-    font-size: 1.1rem !important;
-    line-height: 1.4em !important;
-}
-.why {
-    padding-top: 0.5em;
-    text-align: left;
-}
-.cfp {
-    padding-top: 1em;
     font-size: 1.5rem !important;
 }
 
-.glow {
+.what {
     animation: pulsate 1.5s infinite alternate;
+    border: 0.1rem solid #a8a8a8;
+    border-radius: 0.8rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.2rem whitesmoke, 0 0 0.2rem whitesmoke, 0 0 2rem #00c8e8,
+        0 0 0.8rem #00c8e8;
 }
 
-.what {
-    color: whitesmoke !important;
-    font-size: 2.5rem !important;
-    animation: pulsate 1.5s infinite alternate;
-    border: 0.1rem solid #fff;
-    border-radius: 2rem;
-    padding: 1.5em;
-    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #0fa, 0 0 0.8rem #0fa;
+.motto {
+    color: #00beec !important;
+    font-size: 1.5rem !important;
 }
 .when {
-    padding-top: 2em;
+    padding-bottom: 2em;
     color: whitesmoke !important;
-    font-size: 1.5rem !important;
+    font-size: 1.7rem !important;
+    font-weight: bold;
 }
 .where {
     padding-top: 1.5em;
     color: whitesmoke !important;
     font-size: 1.1rem !important;
 }
-.center {
-    text-align: center;
+
+/* iOS */
+@supports (-webkit-touch-callout: none) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .motto,
+    .where,
+    .when,
+    .what {
+        font-family: monospace, "Arial" !important;
+    }
+}
+/* Chromium + Firefox + x */
+@supports (contain: paint) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .motto,
+    .where,
+    .when,
+    .what {
+        /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; */
+        font-family: Geneva !important;
+    }
 }
 
-.sapMPanel>.sapMPanelHdr,
-.sapMPanelWrappingDiv,
-.sapMPanelWrappingDivTb {
-    border-bottom: 0 !important;
+/* Safari */
+@supports selector(:nth-child(1 of x)) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .motto,
+    .where,
+    .when,
+    .what {
+        font-family: monospace, "Arial" !important;
+    }
 }
