--- a/docs-dev/webapp/css.css
+++ b/docs-dev/webapp/css.css
@@ -8,11 +8,17 @@ body {
     background-color: unset !important;
 }
 
-.t {
+.t, .cfp {
     color: whitesmoke !important;
     font-size: 1.5rem !important;
 }
 
+.cfp > a {
+    border: 0.1rem solid #a8a8a8;
+    border-radius: 0.8rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.8rem #00c8e8;
+}
 .what {
     animation: pulsate 1.5s infinite alternate;
     border: 0.1rem solid #a8a8a8;
@@ -27,7 +33,7 @@ body {
     font-size: 1.5rem !important;
 }
 .when {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
     color: whitesmoke !important;
     font-size: 1.7rem !important;
     font-weight: bold;
