--- a/docs/css.css
+++ b/docs/css.css
@@ -8,11 +8,18 @@ body {
     background-color: unset !important;
 }
 
-.t {
+.t,
+.cfp {
     color: whitesmoke !important;
     font-size: 1.5rem !important;
 }
 
+.cfp > a {
+    border: 0.1rem solid #a8a8a8;
+    border-radius: 0.8rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.8rem #00c8e8;
+}
 .what {
     animation: pulsate 1.5s infinite alternate;
     border: 0.1rem solid #a8a8a8;
@@ -27,7 +34,7 @@ body {
     font-size: 1.5rem !important;
 }
 .when {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
     color: whitesmoke !important;
     font-size: 1.7rem !important;
     font-weight: bold;
@@ -38,6 +45,31 @@ body {
     font-size: 1.1rem !important;
 }
 
+.copyt {
+    color: whitesmoke !important;
+    font-size: 1rem !important;
+}
+
+.platin {
+    color: #ac9f3c;
+}
+.gold {
+    color: gold;
+}
+.silver {
+    color: silver;
+}
+.contact::before {
+    content: "\1F4E7";
+    display: inline;
+}
+.contact > a {
+    padding-left: 0.4em;
+    vertical-align: text-bottom !important;
+}
+li {
+    padding-bottom: 1rem;
+}
 
 /* iOS */
 @supports (-webkit-touch-callout: none) {
@@ -46,6 +78,7 @@ body {
     .sapMLnk,
     .cfp,
     .t,
+    .copyt,
     .motto,
     .where,
     .when,
@@ -61,6 +94,7 @@ body {
     .sapMLnk,
     .cfp,
     .t,
+    .copyt,
     .motto,
     .where,
     .when,
@@ -76,6 +110,7 @@ body {
     .sapMLnk,
     .cfp,
     .t,
+    .copyt,
     .motto,
     .where,
     .when,
@@ -86,7 +121,7 @@ body {
 
 /* mobile only */
 @media only screen and (max-width: 768px) {
-  .t1 {
-        width: 90%
+    .t1 {
+        width: 90%;
     }
 }
