--- a/docs/css.css
+++ b/docs/css.css
@@ -1,23 +1,6 @@
 body {
     background-color: #1c2327;
-}
-/* mucho copypasta from https://css-tricks.com/how-to-create-neon-text-with-css/ */
-.neonText {
-    color: #fff;
-    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
-        0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
-}
-
-@keyframes pulsate {
-    100% {
-        text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
-            0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
-    }
-
-    0% {
-        text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #0fa,
-            0 0 45px #0fa, 0 0 55px #0fa, 0 0 70px #0fa, 0 0 80px #0fa;
-    }
+    font-family: sans-serif !important;
 }
 
 .sapUiGlobalBackgroundColor,
@@ -26,52 +9,122 @@ body {
     background-color: unset !important;
 }
 
-.why,
-.sapMPanelHdr,
-.cfp,
-.where,
-.when,
-.what {
-    font-family: "Source Code Pro", monospace !important;
-}
-
-.hereswhy {
+.t,
+.cfp {
     color: whitesmoke !important;
     font-size: 1.1rem !important;
-    line-height: 1.4em !important;
 }
-.why {
-    padding-top: 0.5em;
-    text-align: left;
-}
-.cfp {
-    padding-top: 1em;
-    font-size: 1.5rem !important;
+.t-small {
+    font-size: small !important
 }
 
-.glow {
-    animation: pulsate 1.5s infinite alternate;
-}
-
+/* .cfp > a {
+    border: 0.1rem solid #a8a8a8;
+    border-radius: 0.8rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.8rem #00c8e8;
+} */
 .what {
-    color: whitesmoke !important;
-    font-size: 2.5rem !important;
     animation: pulsate 1.5s infinite alternate;
-    border: 0.1rem solid #fff;
-    border-radius: 2rem;
-    padding: 1.5em;
-    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #0fa, 0 0 0.8rem #0fa;
+    border: 0.1rem solid #a8a8a8;
+    border-radius: 0.8rem;
+    padding: 0.4em;
+    box-shadow: 0 0 0.2rem whitesmoke, 0 0 0.2rem whitesmoke, 0 0 2rem #00c8e8,
+        0 0 0.8rem #00c8e8;
+}
+
+.motto {
+    color: #00beec !important;
+    font-size: 1.5rem !important;
 }
 .when {
-    padding-top: 2em;
     color: whitesmoke !important;
-    font-size: 1.5rem !important;
+    font-size: 1.7rem !important;
+    font-weight: bold;
 }
 .where {
-    padding-top: 1.5em;
+    /* padding-top: 1.5em; */
     color: whitesmoke !important;
     font-size: 1.1rem !important;
 }
-.center {
-    text-align: center;
+
+.copyt {
+    color: whitesmoke !important;
+    font-size: 1rem !important;
+}
+
+.platin {
+    color: #ac9f3c;
+}
+.gold {
+    color: gold;
+}
+.silver {
+    color: silver;
+}
+.contact::before {
+    content: "\1F4E7";
+    display: inline;
+}
+.contact > a {
+    padding-left: 0.4em;
+    vertical-align: text-bottom !important;
+}
+li {
+    padding-bottom: 1rem;
+}
+
+/* iOS */
+@supports (-webkit-touch-callout: none) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .copyt,
+    .motto,
+    /* .where, */
+    .when,
+    .what {
+        font-family: monospace, "Arial" !important;
+    }
+}
+
+/* Chromium + Firefox + x */
+@supports (contain: paint) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .copyt,
+    .motto,
+    /* .where, */
+    .when,
+    .what {
+        font-family: sans-serif !important;
+    }
+}
+
+/* Safari */
+@supports selector(:nth-child(1 of x)) {
+    .why,
+    .sapMPanelHdr,
+    .sapMLnk,
+    .cfp,
+    .t,
+    .copyt,
+    .motto,
+    /* .where, */
+    .when,
+    .what {
+        font-family: monospace, "Arial" !important;
+    }
+}
+
+/* mobile only */
+@media only screen and (max-width: 768px) {
+    .t1 {
+        width: 90%;
+    }
 }
