--- a/docs-dev/webapp/css.css
+++ b/docs-dev/webapp/css.css
@@ -17,7 +17,7 @@ dd {
     font-size: 1.1rem !important;
 }
 .t-small {
-    font-size: small !important
+    font-size: small !important;
 }
 .t-big {
     color: whitesmoke !important;
@@ -27,8 +27,6 @@ dd {
 .center {
     text-align: center !important;
 }
-
-
 
 /* .cfp > a {
     border: 0.1rem solid #a8a8a8;
@@ -141,5 +139,74 @@ li {
 @media only screen and (max-width: 768px) {
     .t1 {
         width: 90%;
+    }
+}
+
+
+/********************/
+.announce {
+    position: relative;
+    height: 8rem;
+}
+
+.announce h2 {
+    color: #03a9f4;
+    font-size: 6em;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.announce h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #fff;
+}
+
+.announce h2:nth-child(2) {
+    color: #fff;
+    animation: animate 4s ease-in-out 3;
+}
+
+@keyframes animate {
+    0%,
+    100% {
+        clip-path: polygon(
+            0% 45%,
+            16% 44%,
+            33% 50%,
+            54% 60%,
+            70% 61%,
+            84% 59%,
+            100% 52%,
+            100% 100%,
+            0% 100%
+        );
+    }
+
+    50% {
+        clip-path: polygon(
+            0% 60%,
+            15% 65%,
+            34% 66%,
+            51% 62%,
+            67% 50%,
+            84% 45%,
+            100% 46%,
+            100% 100%,
+            0% 100%
+        );
+    }
+}
+
+@-webkit-keyframes stroke-offset {
+    50% {
+        stroke-dashoffset: 35%;
+        stroke-dasharray: 0 87.5%;
+    }
+}
+
+@keyframes stroke-offset {
+    50% {
+        stroke-dashoffset: 35%;
+        stroke-dasharray: 0 87.5%;
     }
 }
