--- a/static/css/common.css
+++ b/static/css/common.css
@@ -440,28 +440,28 @@ a {
   text-decoration-color: currentColor;
   font-size: var(--type-0);
   color: var(--text-color);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.1s ease;
 }
 
 a:is(:hover) {
-  color: var(--brand-color);
+  color: var(--text-color);
   text-decoration: underline;
   text-decoration-color: currentColor;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 3px;
+  text-decoration-thickness: 0.125rem;
+  text-underline-offset: 0.25rem;
 }
 
 a:is(:focus, .active, .active:hover) {
-  outline: none;
-  color: var(--brand-color);
-  text-decoration: underline;
+  color: var(--text-color);
   text-decoration-color: currentColor;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 3px;
+  text-decoration-thickness: 0.125rem;
+  text-underline-offset: 0.25rem;
+  outline: 0.125rem solid var(--text-color);
+  outline-offset: 0.25rem;
 }
 
 a:is(.active) {
-  text-decoration-color: var(--brand-color);
+  text-decoration-color: var(--text-color);
 }
 
 .recap-btn {
@@ -476,22 +476,28 @@ a:is(.active) {
   font-weight: 700;
   text-decoration: none;
   cursor: pointer;
-  transition: all .2s ease-in-out;
   line-height: 1;
   box-shadow: 0 2px 3px rgba(0, 0, 0, .2);
 }
 
-.recap-btn:is(:hover, :focus) {
-  background-image: linear-gradient(15deg, var(--brand-color-alt), var(--brand-color));
+.recap-btn:is(:hover) {
+  background-image: linear-gradient(45deg, var(--brand-color), var(--brand-color-alt));
   color: var(--white);
   box-shadow: 0 2px 8px rgba(0, 0, 0, .4);
   outline: none;
   text-decoration: none;
 }
 
-.recap-btn:focus {
+.recap-btn:is(:focus) {
+  color: var(--white);
+  background-image: linear-gradient(45deg, var(--brand-color), var(--brand-color-alt));
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .4);
   outline: 2px solid var(--brand-color-alt);
   outline-offset: 3px;
+}
+
+a.recap-btn:is(:focus) {
+  outline: 2px solid var(--brand-color-alt);
 }
 
 .recap-btn .icon {
@@ -501,7 +507,6 @@ a:is(.active) {
   margin-inline-end: .5rem;
   transform: translateY(-1px);
 }
-
 
 /* ----------------------- Structure Contents ---------------------------  */
 main {
@@ -685,12 +690,19 @@ footer ul {
 }
 
 footer a {
+  padding: 0.25rem;
   color: var(--white);
 }
 
-footer svg {
+footer a svg {
   width: 2rem;
   height: 2rem;
+  transition: all 0.5s;
+  transform-origin: 50% 50%;
+}
+
+footer a:is(:hover, :focus) svg {
+  transform: scale(1.3);
 }
 
 /* ---------------------------- Dark Mode ----------------------------  */
