--- a/docs/css/modules/_sponsors.css
+++ b/docs/css/modules/_sponsors.css
@@ -143,9 +143,14 @@
 }
 
 .recap-sponsors-logo {
+  display: block;
   fill: var(--text-color);
-  max-width: 14rem;
+  width: 14rem;
   max-height: 8rem;
+}
+
+.recap-sponsors-logo:is(picture) {
+  margin-block: 2rem;
 }
 
 .recap-sponsors-badge {
