--- a/docs/css/modules.css
+++ b/docs/css/modules.css
@@ -1,3 +1,5 @@
 @import url("modules/_sponsors.css");
 @import url("modules/_code-connect.css");
 @import url("modules/_tito.css");
+@import url("modules/_agenda.css");
+@import url("modules/_agendaModal.css");
