--- a/docs/css/modules.css
+++ b/docs/css/modules.css
@@ -3,3 +3,4 @@
 @import url("modules/_tito.css");
 @import url("modules/_agenda.css");
 @import url("modules/_agendaModal.css");
+@import url("modules/_faq.css");
