--- a/docs/css/modules/_faq.css
+++ b/docs/css/modules/_faq.css
@@ -32,6 +32,18 @@
    display: block;
 }
 
+.recap-faq a {
+   display: inline;
+   text-decoration: underline;
+   text-decoration-color: var(--text-color);
+   text-decoration-thickness: 0.125rem;
+   text-underline-offset: 0.25rem;
+}
+
+.recap-faq a:is(:hover) {
+  text-decoration-color: var(--brand-color);
+}
+
 @media only screen and (min-width: 768px) {
   .recap-faq ul {
      text-align: start;
