add link to the app and CSS fixes

--- a/docs/css/modules/_agenda.css
+++ b/docs/css/modules/_agenda.css
@@ -202,7 +202,9 @@
     }
 
     .recap-agenda-slot-talk {
-        width: 60%;
+        width: 55%;
+        min-width: 55%;
+        max-width: 55%;
     }
 
     .recap-agenda-slot-speakers {
