add live now badge to sessions that are currently streaming (#35)
* fix: add Code Connect section

* add the first sponsor

* added asbrucon sponsor

* wording fix

* html comment removed.

* fix for missing logo in Safari

* fix for missing logo in Safari

* Added agilita sponsor.

* add more sponsors

* add LinkedIn links for Rizind and Aarini

* add a new sponsor and remove propose topic link

* add registration message

* Introduced tito widget section

- removed early bird ticket section.

* updated asbrucon sponsor logo to latest version.

* added rev-trac as a sponsor

* added missing dark mode logo to rev-trac

* open registration

* join waitlist button update

* add Gambit sponsor

* add the agenda

* css and html for the latest header

* add FAQ

* minor CSS fixes for mobile mode

* add link to the app and CSS fixes

* update aarini sponsor and the sorting

* format food break to show dining

* add links to the livestreams

---------

Co-authored-by: Fabian Tempel <fabian.tempel@sap.com>
Co-authored-by: Fabian Tempel <fab.tem@gmail.com>

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -682,6 +682,20 @@ main {
     margin-block-end: 0;
 }
 
+.recap-live {
+  display: flex;
+  line-height: 1;
+  color: var(--brand-color);
+  font-size: clamp(3rem, 6vw, 5rem);
+  font-weight: 900;
+  text-align: center;
+  background-image: linear-gradient(35deg, var(--brand-color), var(--brand-color-alt));
+  background-clip: text;
+  color: transparent;
+  margin-block: 1rem 2rem;
+}
+
+
 @media only screen and (min-width: 768px) {
   .recap-site-header .recap-wrap {
     flex-direction: row-reverse;
